unpackaged/main/default/objects/Vendor__c/Vendor__c.object-meta.xml
<CustomObject>
    <label>Vendor</label>
    <nameField>
        <label>Vendor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vendor</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>