unpackaged/main/default/objects/Vendor__c/fields/Active_MSA_Flag_Count__c.field-meta.xml
<CustomField>
    <fullName>Active_MSA_Flag_Count__c</fullName>
    <label>Active MSA Flag Count</label>
    <summaryFilterItems>
        <field>Service_Agreement__c.Active_MSA_Flag__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Service_Agreement__c.Vendor__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>