unpackaged/main/default/objects/Vendor__c/fields/Area_Of_Expertise__c.field-meta.xml
<CustomField>
    <fullName>Area_Of_Expertise__c</fullName>
    <label>Area Of Expertise</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Solar Installation</fullName>
            </value>
            <value>
                <fullName>Solar Service</fullName>
            </value>
            <value>
                <fullName>Electrician</fullName>
            </value>
            <value>
                <fullName>Roofing</fullName>
            </value>
            <value>
                <fullName>Permitting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>