unpackaged/main/default/objects/Vendor__c/fields/Business_License__c.field-meta.xml
<CustomField>
    <fullName>Business_License__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Business License</label>
    <type>Checkbox</type>
</CustomField>