unpackaged/main/default/objects/Vendor__c/fields/Compliance_Email__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Email__c</fullName>
    <label>Compliance Email</label>
    <type>Email</type>
</CustomField>