unpackaged/main/default/objects/Vendor__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Vendor</relationshipLabel>
    <relationshipName>Vendor</relationshipName>
    <type>Lookup</type>
</CustomField>