unpackaged/main/default/objects/Vendor__c/fields/Date_of_MSA__c.field-meta.xml
<CustomField>
    <fullName>Date_of_MSA__c</fullName>
    <label>Onboarding Date</label>
    <type>Date</type>
</CustomField>