unpackaged/main/default/objects/Vendor__c/fields/Dispatch_ID__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_ID__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dispatch ID</label>
    <type>Checkbox</type>
</CustomField>