unpackaged/main/default/objects/Vendor__c/fields/Dispatch_Login__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Login__c</fullName>
    <label>Dispatch Login</label>
    <type>TextArea</type>
</CustomField>