unpackaged/main/default/objects/Vendor__c/fields/Due_Date1__c.field-meta.xml
<CustomField>
    <fullName>Due_Date1__c</fullName>
    <label>Business Info Checklist Due Date</label>
    <type>Date</type>
</CustomField>