unpackaged/main/default/objects/Vendor__c/fields/Due_Date4__c.field-meta.xml
<CustomField>
    <fullName>Due_Date4__c</fullName>
    <label>Business License Due Date</label>
    <type>Date</type>
</CustomField>