unpackaged/main/default/objects/Vendor__c/fields/Follow_Up_Notes1__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Notes1__c</fullName>
    <label>Business Info Checklist Follow-Up Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>