unpackaged/main/default/objects/Vendor__c/fields/Follow_Up_Owner1__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Owner1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Info Checklist Follow-Up Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Vendor1</relationshipName>
    <type>Lookup</type>
</CustomField>