unpackaged/main/default/objects/Vendor__c/fields/Follow_Up_Owner4__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Owner4__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business License Follow-Up Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Vendor4</relationshipName>
    <type>Lookup</type>
</CustomField>