unpackaged/main/default/objects/Vendor__c/fields/Insurance_Missing__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Missing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Insurance Missing</label>
    <type>Checkbox</type>
</CustomField>