unpackaged/main/default/objects/Vendor__c/fields/Insurance_Quote_Offered__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Quote_Offered__c</fullName>
    <label>Insurance Quote Offered</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>