unpackaged/main/default/objects/Vendor__c/fields/Insurance_Quote_Offered_Contact__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Quote_Offered_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insurance Quote Offered Contact</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Vendor9</relationshipName>
    <type>Lookup</type>
</CustomField>