unpackaged/main/default/objects/Vendor__c/fields/Insurance_Rejected__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Rejected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Insurance Rejected</label>
    <type>Checkbox</type>
</CustomField>