unpackaged/main/default/objects/Vendor__c/fields/Insurance_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Requirements__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Insurance Requirements</label>
    <type>Checkbox</type>
</CustomField>