unpackaged/main/default/objects/Vendor__c/fields/Interested_In__c.field-meta.xml
<CustomField>
    <fullName>Interested_In__c</fullName>
    <label>Interested In</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>More Business For My Company</fullName>
            </value>
            <value>
                <fullName>Join An Existing Install Team</fullName>
            </value>
            <value>
                <fullName>Start My Own Install Company</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>