unpackaged/main/default/objects/Vendor__c/fields/Job_Capacity_Month__c.field-meta.xml
<CustomField>
    <fullName>Job_Capacity_Month__c</fullName>
    <label>Job Capacity/Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>