unpackaged/main/default/objects/Vendor__c/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <label>Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cold Call</fullName>
            </value>
            <value>
                <fullName>Job Board</fullName>
            </value>
            <value>
                <fullName>Paid Search</fullName>
            </value>
            <value>
                <fullName>Partnership</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>