unpackaged/main/default/objects/Vendor__c/fields/License_Missing__c.field-meta.xml
<CustomField>
    <fullName>License_Missing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>License Missing</label>
    <type>Checkbox</type>
</CustomField>