unpackaged/main/default/objects/Vendor__c/fields/License_Rejected__c.field-meta.xml
<CustomField>
    <fullName>License_Rejected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>License Rejected</label>
    <type>Checkbox</type>
</CustomField>