unpackaged/main/default/objects/Vendor__c/fields/Loss_Run__c.field-meta.xml
<CustomField>
    <fullName>Loss_Run__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Loss Run</label>
    <type>Checkbox</type>
</CustomField>