unpackaged/main/default/objects/Vendor__c/fields/Price_Per_Panel__c.field-meta.xml
<CustomField>
    <fullName>Price_Per_Panel__c</fullName>
    <inlineHelpText>$/ Panel</inlineHelpText>
    <label>Price Per Panel</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>