unpackaged/main/default/objects/Vendor__c/fields/Price_Per_Watt__c.field-meta.xml
<CustomField>
    <fullName>Price_Per_Watt__c</fullName>
    <label>Price Per Watt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>