unpackaged/main/default/objects/Vendor__c/fields/Reasons__c.field-meta.xml
<CustomField>
    <fullName>Reasons__c</fullName>
    <inlineHelpText>Reasons for  Do Not Contact, Unqualified &amp; Not Interested.</inlineHelpText>
    <label>Reasons</label>
    <type>TextArea</type>
</CustomField>