unpackaged/main/default/objects/Vendor__c/fields/Scope_Trademarks__c.field-meta.xml
<CustomField>
    <fullName>Scope_Trademarks__c</fullName>
    <label>Scope of Work</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Business Development</fullName>
            </value>
            <value>
                <fullName>Electrical Work</fullName>
            </value>
            <value>
                <fullName>Ground Mount</fullName>
            </value>
            <value>
                <fullName>Inspections</fullName>
            </value>
            <value>
                <fullName>Low Voltage (Thermostat)</fullName>
            </value>
            <value>
                <fullName>O&amp;M</fullName>
            </value>
            <value>
                <fullName>Permitting</fullName>
            </value>
            <value>
                <fullName>Pest Abatement</fullName>
            </value>
            <value>
                <fullName>PV Installation</fullName>
            </value>
            <value>
                <fullName>Rafter / Structural Upgrades</fullName>
            </value>
            <value>
                <fullName>Roofing</fullName>
            </value>
            <value>
                <fullName>Storage</fullName>
            </value>
            <value>
                <fullName>Survey</fullName>
            </value>
            <value>
                <fullName>Tree Removal</fullName>
            </value>
            <value>
                <fullName>Trenching</fullName>
            </value>
            <value>
                <fullName>Main Panel Upgrade</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>