unpackaged/main/default/objects/Vendor__c/fields/Service_Territory__c.field-meta.xml
<CustomField>
    <fullName>Service_Territory__c</fullName>
    <label>Service Territory</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>State</valueSetName>
    </valueSet>
</CustomField>