unpackaged/main/default/objects/Vendor__c/fields/Sitecapture_ID__c.field-meta.xml
<CustomField>
    <fullName>Sitecapture_ID__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sitecapture ID</label>
    <type>Checkbox</type>
</CustomField>