unpackaged/main/default/objects/Vendor__c/fields/SiteCapture_Login__c.field-meta.xml
<CustomField>
    <fullName>SiteCapture_Login__c</fullName>
    <label>SiteCapture Login</label>
    <type>TextArea</type>
</CustomField>