unpackaged/main/default/objects/Vendor__c/fields/Solaredge_ID__c.field-meta.xml
<CustomField>
    <fullName>Solaredge_ID__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Solaredge ID</label>
    <type>Checkbox</type>
</CustomField>