unpackaged/main/default/objects/Vendor__c/fields/SolarEdge_Login__c.field-meta.xml
<CustomField>
    <fullName>SolarEdge_Login__c</fullName>
    <label>SolarEdge Login</label>
    <type>TextArea</type>
</CustomField>