unpackaged/main/default/objects/Vendor__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Onboarding Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Interview Complete</fullName>
            </value>
            <value>
                <fullName>App Complete</fullName>
            </value>
            <value>
                <fullName>Doc Review</fullName>
            </value>
            <value>
                <fullName>Docs Failed</fullName>
            </value>
            <value>
                <fullName>MSA Signed</fullName>
            </value>
            <value>
                <fullName>Ready for Orientation</fullName>
            </value>
            <value>
                <fullName>Ready to Schedule</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Approved not Active</fullName>
            </value>
            <value>
                <fullName>Do not Schedule</fullName>
            </value>
            <value>
                <fullName>Off Boarded</fullName>
            </value>
            <value>
                <fullName>Docs Approved</fullName>
            </value>
            <value>
                <fullName>Unqualified</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>Do Not Contact</fullName>
            </value>
            <value>
                <fullName>Pending Background Check</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>