unpackaged/main/default/objects/Vendor__c/fields/Trade_Licensing__c.field-meta.xml
<CustomField>
    <fullName>Trade_Licensing__c</fullName>
    <label>Trade Licensing</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Electrical License</fullName>
            </value>
            <value>
                <fullName>General Contractor</fullName>
            </value>
            <value>
                <fullName>Special Trade License</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>