unpackaged/main/default/objects/Vendor__c/fields/Vendor_Type__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Type__c</fullName>
    <label>Vendor Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PV Installation Build Partner</fullName>
            </value>
            <value>
                <fullName>O&amp;M</fullName>
            </value>
            <value>
                <fullName>Electrical Only</fullName>
            </value>
            <value>
                <fullName>Roofing Only</fullName>
            </value>
            <value>
                <fullName>Misc. Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>