unpackaged/main/default/objects/Vendor__c/fields/W9_Missing__c.field-meta.xml
<CustomField>
    <fullName>W9_Missing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>W9 Missing</label>
    <type>Checkbox</type>
</CustomField>