unpackaged/main/default/objects/Vendor__c/fields/W9_Rejected__c.field-meta.xml
<CustomField>
    <fullName>W9_Rejected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>W9 Rejected</label>
    <type>Checkbox</type>
</CustomField>