unpackaged/main/default/objects/Vendor__c/fields/X18_Char_ID__c.field-meta.xml
<CustomField>
    <fullName>X18_Char_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>18 Char ID</label>
    <type>Text</type>
</CustomField>