unpackaged/main/default/objects/Vendor__c/fields/Years_of__c.field-meta.xml
<CustomField>
    <fullName>Years_of__c</fullName>
    <label>Years of Solar Install Experience</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0-3</fullName>
            </value>
            <value>
                <fullName>4-10</fullName>
            </value>
            <value>
                <fullName>10+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>