unpackaged/main/default/objects/Vendor__c/validationRules/Enter_Reasons_for_Onboarding_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Enter_Reasons_for_Onboarding_Status</fullName>
    <active>true</active>
    <description>Add reason for onboarding status (particularly for Do Not Contact, Unqualified, Not Interested)</description>
    <errorConditionFormula>AND(ISBLANK( Reasons__c ),
(ISPICKVAL( Stage__c, "Do Not Contact")  || 
ISPICKVAL( Stage__c, "Unqualified")  ||
ISPICKVAL( Stage__c, "Not Interested")
)
)</errorConditionFormula>
    <errorDisplayField>Reasons__c</errorDisplayField>
    <errorMessage>Reason for Do Not Contact or Unqualified or Not Interested</errorMessage>
</ValidationRule>