unpackaged/main/default/objects/Vendor__c/listViews/Active_No_Longer_Compliant_Vendors.listView-meta.xml
<ListView>
    <fullName>Active_No_Longer_Compliant_Vendors</fullName>
    <booleanFilter>(1 OR 2) AND NOT 3</booleanFilter>
    <columns>NAME</columns>
    <columns>Stage__c</columns>
    <columns>Sub_Status__c</columns>
    <columns>Account__c</columns>
    <columns>Scope_Trademarks__c</columns>
    <columns>Vendor_Type__c</columns>
    <columns>State__c</columns>
    <columns>Service_Territory__c</columns>
    <columns>Date_of_MSA__c</columns>
    <columns>Price_Per_Panel__c</columns>
    <columns>Price_Per_Watt__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Ready to Schedule,Active</value>
    </filters>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Do not Schedule</value>
    </filters>
    <filters>
        <field>Sub_Status__c</field>
        <operation>equals</operation>
        <value>No Show,Install Issue,Safety Issue</value>
    </filters>
    <label>Active &amp; No Longer Compliant Vendors</label>
</ListView>