unpackaged/main/default/objects/Vendor__c/listViews/Active_Vendors2.listView-meta.xml
<ListView>
    <fullName>Active_Vendors2</fullName>
    <booleanFilter>1</booleanFilter>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Scope_Trademarks__c</columns>
    <columns>State__c</columns>
    <columns>Date_of_MSA__c</columns>
    <columns>Price_Per_Panel__c</columns>
    <columns>Price_Per_Watt__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Active Vendors</label>
</ListView>