unpackaged/main/default/objects/Vendor__c/listViews/All_Vendors.listView-meta.xml
<ListView>
    <fullName>All_Vendors</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Scope_Trademarks__c</columns>
    <columns>Trade_Licensing__c</columns>
    <columns>Stage__c</columns>
    <columns>Service_Territory__c</columns>
    <columns>City__c</columns>
    <columns>State__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Lead_Source__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Vendors</label>
</ListView>