unpackaged/main/default/objects/Vendor__c/listViews/Build_Partner_Approval_Team_Vendor.listView-meta.xml
<ListView>
    <fullName>Build_Partner_Approval_Team_Vendor</fullName>
    <filterScope>Queue</filterScope>
    <label>Build Partner Approval Team</label>
    <queue>Build_Partner_Approval_Team</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>