unpackaged/main/default/objects/Vendor__c/listViews/Created_Vendors_Red_Ventures.listView-meta.xml
<ListView>
    <fullName>Created_Vendors_Red_Ventures</fullName>
    <booleanFilter>1 AND 2</booleanFilter>
    <columns>NAME</columns>
    <columns>Stage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER.LAST_NAME</field>
        <operation>equals</operation>
        <value>Schamp,Fornay,Hatterman,Green,Manriquez</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>2/1/2021 12:00 AM</value>
    </filters>
    <label>Created Vendors - Red Ventures</label>
</ListView>