unpackaged/main/default/objects/Vendor__c/listViews/Draft_report.listView-meta.xml
<ListView>
    <fullName>Draft_report</fullName>
    <columns>NAME</columns>
    <columns>State__c</columns>
    <columns>Stage__c</columns>
    <columns>Vendor_Type__c</columns>
    <columns>Service_Territory__c</columns>
    <columns>Business_Info_Checklist__c</columns>
    <columns>Follow_Up_Notes1__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>notContain</operation>
        <value>Active,Approved,Ready to Schedule,Approved not Active,Unqualified,No</value>
    </filters>
    <label>Draft funnel report</label>
</ListView>