unpackaged/main/default/objects/Vendor__c/listViews/Interview_Complete.listView-meta.xml
<ListView>
    <fullName>Interview_Complete</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>State__c</columns>
    <columns>Description__c</columns>
    <columns>Stage__c</columns>
    <columns>Scope_Trademarks__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Interview Complete</value>
    </filters>
    <label>04. Interview Complete</label>
</ListView>