unpackaged/main/default/objects/Vendor__c/listViews/MSA_Signed.listView-meta.xml
<ListView>
    <fullName>MSA_Signed</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>State__c</columns>
    <columns>Description__c</columns>
    <columns>Stage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>MSA Signed,App Complete,Doc Review,Docs Failed</value>
    </filters>
    <label>06. MSA Signed</label>
</ListView>