unpackaged/main/default/objects/Vendor__c/listViews/MSA_signed1.listView-meta.xml
<ListView>
    <fullName>MSA_signed1</fullName>
    <columns>NAME</columns>
    <columns>MSA__c</columns>
    <columns>Business_Info_Checklist__c</columns>
    <columns>Business_License__c</columns>
    <columns>W_9__c</columns>
    <columns>Insurance_Requirements__c</columns>
    <columns>Loss_Run__c</columns>
    <columns>Trade_License__c</columns>
    <columns>Safety_Program__c</columns>
    <columns>Stage__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Interview Complete,App Complete,Doc Review,MSA Signed</value>
    </filters>
    <filters>
        <field>MSA__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>MSA signed</label>
</ListView>