unpackaged/main/default/objects/Vendor__c/listViews/No_Onboarding_Status.listView-meta.xml
<ListView>
    <fullName>No_Onboarding_Status</fullName>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <columns>Stage__c</columns>
    <columns>NAME</columns>
    <columns>Date_of_MSA__c</columns>
    <columns>State__c</columns>
    <columns>Scope_Trademarks__c</columns>
    <columns>Service_Territory__c</columns>
    <columns>Vendor_Type__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>notContain</operation>
        <value>Prospect,Lead,Interview Complete,App Complete,Doc Review,Docs Failed</value>
    </filters>
    <filters>
        <field>Stage__c</field>
        <operation>notContain</operation>
        <value>MSA Signed,Ready to Schedule,Active,Approved not Active,Do not Schedule</value>
    </filters>
    <filters>
        <field>Stage__c</field>
        <operation>notContain</operation>
        <value>Off Boarded,Docs Approved,Unqualified,Not Interested,Do Not Contact</value>
    </filters>
    <label>01. No Onboarding Status - New Leads</label>
</ListView>