unpackaged/main/default/objects/Vendor__c/listViews/Pre_Con_Vendor_View.listView-meta.xml
<ListView>
    <fullName>Pre_Con_Vendor_View</fullName>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Stage__c</columns>
    <columns>Scope_Trademarks__c</columns>
    <columns>State__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Prospect,Lead,Interview Complete,Doc Review,Docs Failed,MSA Signed</value>
    </filters>
    <filters>
        <field>Scope_Trademarks__c</field>
        <operation>equals</operation>
        <value>Electrical Work,Trenching,Roofing</value>
    </filters>
    <label>Pre-Con Vendor View</label>
</ListView>