unpackaged/main/default/objects/Vendor__c/listViews/TX_Vendors.listView-meta.xml
<ListView>
    <fullName>TX_Vendors</fullName>
    <booleanFilter>1</booleanFilter>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>City__c</columns>
    <columns>Stage__c</columns>
    <columns>Scope_Trademarks__c</columns>
    <columns>State__c</columns>
    <columns>Service_Territory__c</columns>
    <columns>Vendor_Type__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>State__c</field>
        <operation>equals</operation>
        <value>New Mexico</value>
    </filters>
    <label>NM Vendors</label>
</ListView>